--- a/SWE363/index.html
+++ b/SWE363/index.html
@@ -10,12 +10,12 @@
     <meta name="keywords"
         content="Al-Nadria farms, nurseries, agriculture, Abha, Rufaida, vegetables, fruits, fish farming, Nile tilapia, ornamental plants, trees">
     <meta name="author" content="Abdulaziz">
-    <link rel="stylesheet" href="dark_theme.CSS">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <header>
-        <img src="logo.jpeg" alt="main logo" height="200" width="300">
+        <img src="logo.png" alt="main logo" height="300" width="300">
         <h1>Al-Nadria farms and nurseries</h1>
         <p>A site concerned with displaying the production of Al-Nadria farms and nurseries, which are located in
             the southern region of the Kingdom in Abha, one of Rufaida, the two branches in particular,<br> and what
