--- a/SWE363/ornamental_plants.html
+++ b/SWE363/ornamental_plants.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1 style="color: rgb(72, 141, 99);">Ornamental plants</h1>
+    <h1 >Ornamental plants</h1>
         <h2>pansy</h2>
-    <img src="pansy.jpg" alt="pansy" height="200" width="400">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7d/Pansy_Flower.jpg" alt="pansy" height="300" width="300">
     <h2>Celosia</h2>
     <img src="Celosia.jpg" alt="Celosia" height="200" width="400">
     <h2>damascena</h2>
