--- a/SWE363/proposal_form.html
+++ b/SWE363/proposal_form.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Submit a Proposal</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
