--- a/SWE363/contacts.html
+++ b/SWE363/contacts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
@@ -40,6 +40,15 @@
             <a href="mailto:fhdkbeer@gmail.com">fhdkbeer@gmail.com</a>
         </address>
     </footer>
+    <script>
+        // JavaScript to hide loader and show content after 2 seconds
+        document.addEventListener("DOMContentLoaded", function () {
+            setTimeout(function () {
+                document.querySelector(".loader-container").style.display = "none";
+                document.body.style.overflow = "visible"; // Show the content
+            }, 2000);
+        });
+    </script>
 </body>
 
 </html>
