--- a/SWE363/ornamental_plants.html
+++ b/SWE363/ornamental_plants.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
 <body>
     <h1 >Ornamental plants</h1>
@@ -44,6 +44,14 @@
         </tr>
     </tbody>
 </table>
-
+<script>
+    // JavaScript to hide loader and show content after 2 seconds
+    document.addEventListener("DOMContentLoaded", function () {
+        setTimeout(function () {
+            document.querySelector(".loader-container").style.display = "none";
+            document.body.style.overflow = "visible"; // Show the content
+        }, 2000);
+    });
+</script>
 </body>
 </html>
