--- a/SWE363/index.html
+++ b/SWE363/index.html
@@ -40,6 +40,12 @@
     <div id="covid-stats-content"></div>
 </section>
 
+<form action="/process-form" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+    <button type="submit">Submit</button>
+  </form>
+
 
     <!-- Dynamic Posts Section -->
     <section id="dynamic-posts"></section>
